--- a/pages/dashboard/UserDashboard.html
+++ b/pages/dashboard/UserDashboard.html
@@ -75,6 +75,11 @@
 </a>
 
 </script>
+<script src="../../scripts/session.js"></script>
+<script src="../../scripts/roles.js"></script>
+<script>
+  userOnly();
+</script>
 
 </body>
 </html>
