--- a/pages/home/Home.html
+++ b/pages/home/Home.html
@@ -75,6 +75,9 @@
   <footer class="footer">
     <p>© 2025 THE PRIME DESIGN SOLUTIONS | Engineering & CAD Platform</p>
   </footer>
+<a href="#" onclick="clearSession(); location.href='../auth/Login.html';">
+  Logout
+</a>
 
 </body>
 </html>
