--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+  
 <head>
+  <link rel="stylesheet" href="styles/theme.css" />
+<link rel="stylesheet" href="styles/layout.css" />
+<link rel="stylesheet" href="styles/globals.css" />
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>THE PRIME DESIGN SOLUTIONS</title>
 
   <!-- Main Global Styles -->
-  <link rel="stylesheet" href="styles/global.css" />
+  <link rel="stylesheet" href="styles/globals.css" />
 
   <!-- Optional icon -->
   <link rel="icon" href="assets/icons/logo.png" />
@@ -28,7 +33,8 @@
   <!-- ===== HERO SECTION ===== -->
   <section class="hero">
     <div class="heroText">
-      <h2>Engineering CAD Learning & Design Marketplace</h2>
+      <class="brand-name"><h1>THE PRIME DESIGN SOLUTIONS</h1>
+      <h1>Engineering CAD Learning & Design Marketplace</h1>
       <p>
         Learn mechanical CAD design step-by-step, collaborate with engineers,
         and access professional mechanical design projects.
